--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,39 @@
 body{
-    background-color: #e8ffff;
     text-align:center;
+    margin:0;
 }
 img{
     width: 10%;
     height:auto;
 }
-div{
+.navbar{
+    background-color:#dff3e3;
     text-align:left;
+    height:165px;
+}
+.top-container{
+    background-color:#e8ffff;
+    height: 700px;
+    width:100%;
+    margin-right:0;
+}
+.middle-container{
+    background-color:yellow;
+    height: 700px;
+    
+}
+.bottom-container{
+    background-color:blue;
+    height: 700px;
 }
 #mountain_1{
     width:80%;
     height:30%;
     position:relative;
-    top:300px;
+    top:450px;
 }
 #first_intro{
     position: relative;
     top:250px;
+    margin:0 auto 0 auto;
 }
