--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ img{
     height: 700px;
     width:100%;
     margin-right:0;
+    text-align:center;
 }
 .middle-container{
     background-color:#ffb26b;
@@ -30,7 +31,7 @@ img{
     width:80%;
     height:30%;
     position:relative;
-    top:453px;
+    top:370px;
 }
 #mountain_2{
     width: 80%;
@@ -47,7 +48,16 @@ img{
     left:210px;
 }
 #first_intro{
+    font-size:4em;
     position: relative;
-    top:250px;
+    top:150px;
     margin:0 auto 0 auto;
+    font-family: 'Sacramento', cursive;
+}
+h2{
+    position: relative;
+    font-family: 'Nanum Gothic', sans-serif;
+    margin:0;
+    top:150px;
+    
 }
