--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ img{
     height:40%;
     position: relative;
     top:420px;
-    left:210px;
+    left:160px;
 }
 #first_intro{
     font-size:4em;
@@ -56,7 +56,7 @@ img{
 }
 h2{
     position: relative;
-    font-family: 'Nanum Gothic', sans-serif;
+    font-family: 'Roboto Slab', serif;
     margin:0;
     top:150px;
     
@@ -85,4 +85,24 @@ h2{
     position: absolute;
     top:1250px;
     right:300px;
+}
+#contact-h{
+    position: absolute;
+    text-align:left;
+    left:120px;
+    top:1600px;
+}
+form{
+    position: absolute;
+    text-align:left;
+    left:120px;
+    top:1700px;
+}
+
+#linkedin{
+    position: absolute;
+    top:2150px;
+    width:70px;
+    left:120px;
+
 }
